src/objects/Case_Routing_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldCount__c</fullName>
        <formula>Len(Routing_Rule_Aggregate__c)-Len(SUBSTITUTE(Routing_Rule_Aggregate__c,&quot;~&quot;,&quot;&quot;))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FieldCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Organization__c</fullName>
        <label>Product Organization</label>
        <referenceTo>Product_Organization__c</referenceTo>
        <relationshipLabel>Case Routing Rules</relationshipLabel>
        <relationshipName>Case_Routing_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case Routing 1</fullName>
                </value>
                <value>
                    <fullName>Case Routing 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routing_Rule_Aggregate__c</fullName>
        <formula>&quot;Product_Organization__r.Name:&quot;+Product_Organization__r.Name + 
IF(Product__c ==&apos;&apos;,&apos;&apos;,&quot;~asset.name=&quot;+TRIM(Product__c))&amp; 
IF(Priority__c ==&apos;&apos;,&apos;&apos;,&quot;~Priority=&quot;+Priority__c)&amp; 
IF(Issue_Category__c ==&apos;&apos;,&apos;&apos;,&quot;~Issue_Category__c=&quot;+Issue_Category__c)&amp; 
IF(Account__c==&apos;&apos;,&apos;&apos;,&quot;~account.name=&quot;+Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Routing Rule Aggregate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Routing_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Routing Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Case Routing Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Routing Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>